update: docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,10 @@ services:
     build: .
     labels:
       - "traefik.enable=true" # <== Enable traefik to proxy this container
-      - "traefik.http.routers.component1.rule=Host(`summary.mytestingenlocal.ml`)" # <== Your Domain Name for the https rule
-      - "traefik.http.routers.component1.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
-      - "traefik.http.routers.component1.tls.certresolver=mytlschallenge" # <== Defining certsresolvers for https
-      - "traefik.http.services.component1.loadbalancer.server.port=3000" # <== port running
-      - "traefik.docker.network=web"
+      - "traefik.http.routers.summary.rule=Host(`summary.mytestingenlocal.ml`)" # <== Your Domain Name for the https rule
+      - "traefik.http.routers.summary.entrypoints=web-secured" # <== Defining entrypoint for https, **ref: line 31
+      - "traefik.http.services.summary.loadbalancer.server.port=3000" # <== port running
+      - "traefik.http.routers.nginx-secured.tls.certresolver=mytlschallenge" # <== Defining certsresolvers for https
     networks:
       - web
     env_file:
